--- a/style.css
+++ b/style.css
@@ -17,3 +17,14 @@ body {
     left: 20px;
     width: 40px;
 }
+
+header h1 {
+    font-size: 100px;
+}
+
+.logoprincipal {
+    width: 50px;
+    height: 50px;
+}
+
+.redessociais
