--- a/style.css
+++ b/style.css
@@ -2,7 +2,10 @@
 
 body {
     background-color: rgb(32, 188, 209);
-    color: white;
+    margin: 0;
+    padding-top: 60px;
+    box-sizing: border-box;
+    color: rgb(56, 55, 55);
     font-family: "Oswald", Arial, Helvetica, sans-serif;
 }
 
@@ -23,8 +26,23 @@ header h1 {
 }
 
 .logoprincipal {
-    width: 50px;
-    height: 50px;
+    width: 70px;
+    height: 70px;
 }
 
-.redessociais
+.redessociais {
+    width: 40px;
+    height: 40px;
+    cursor: pointer;
+    top: 20px;
+}
+
+.container {
+    max-width: 960px;
+    margin: 20px auto;
+    padding: 20px;
+    background-color: #f4f4f4;
+    border-radius: 5px;
+    box-shadow: 0 0 10px rgb(0, 0, 0, 0.1);
+    position: relative;
+}
