--- a/style.css
+++ b/style.css
@@ -73,7 +73,7 @@ footer {
     top: 0;
     left: 0;
     width: 100%;
-    background-color: #333;
+    background-color: #b4b4b4;
     color: white;
     padding: 10px 0;
     z-index: 1000;
